--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							</section>
 							<section>
 								<i class="fa fa-envelope"></i>
-								<p><a href="#">bidemiadeleke@yahoo.com</a></p>
+								<p><a href="#">bidemiadeleke1@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
